tests/error/no_inherit.gw
#! [contains] can't inherit
class C extends TypedFork:[int] {

}

var C c;
c.exit();
